feat: update book service